--- a/src/sections/video.css
+++ b/src/sections/video.css
@@ -74,7 +74,46 @@
 
 /* ------------------------MEDIA QUERIES--------------------------*/
 
-
+/* -------------------- LARGE TABLET ------------- */
+@media screen and (max-width: 1200px) and (min-width: 992px) {
+    .video_section {    
+        max-height: 31vh;
+    }
+    #back_video {
+        
+        width: 100vw;  
+        height: 100vh;                                                                                                                                      
+    }
+    .video_section_layover {
+        width: 70vw;
+        height: 15vh;
+    
+    }
+    .video_headline {
+        font-size: 4em;
+        line-height: 1.2em;  
+        letter-spacing: .5rem; 
+        text-align: center;     
+    }
+    .video_headline_2 {  
+        font-size: 1.5em;   
+        letter-spacing: .17rem;
+        line-height: .8em;
+        margin: .4em 0;
+        text-align: center;
+    }
+    .video_copy {       
+        font-size: .9em;
+        letter-spacing: .03em;  
+        line-height: 1.2em;
+        margin: .4rem 0 0;      
+        max-width: 16rem;
+        text-align: center;
+    }
+    .video_logo {
+        width: 10rem;
+    }
+}
 
 
 /* -------------------- SMALL TABLET ------------- */
